Add test to dws-injection

--- a/dws-injection/pom.xml
+++ b/dws-injection/pom.xml
@@ -9,6 +9,6 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>dws-introduction</artifactId>
+    <artifactId>dws-injection</artifactId>
 
 </project>
