--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 		<module>dws-injection</module>
         <module>dws-functional</module>
         <module>dws-layers</module>
+        <module>dws-presentation</module>
     </modules>
 
 	<dependencies>
