--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <module>dws-layers</module>
         <module>dws-presentation</module>
         <module>dws-hateoas</module>
+        <module>dws-locale</module>
     </modules>
 
 	<dependencies>
