--- a/dws-presentation/src/main/resources/application.properties
+++ b/dws-presentation/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+spring.application.name=dws-presentation
+spring.application.url=http://localhost:8080
 spring.datasource.url=jdbc:mariadb://localhost:3306/bookstore
 spring.datasource.username=root
 spring.datasource.password=root
+
+app.pagination.page-size=10
