--- a/dws-presentation/src/main/resources/application.properties
+++ b/dws-presentation/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/bookstore
 spring.datasource.username=root
 spring.datasource.password=root
 
-app.pagination.page-size=10
+app.default.language=es
