--- a/dws-presentation/src/main/resources/application.properties
+++ b/dws-presentation/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=dws-presentation
-spring.application.url=http://localhost:8080
 spring.datasource.url=jdbc:mariadb://localhost:3306/bookstore
 spring.datasource.username=root
 spring.datasource.password=root
 
-app.default.language=es
+app.language.default=es
+app.base.url=http://localhost:8080
+app.pageSize.default=10
